Criação dos demais serviços para a conta, adição da consulta de movimentação, bem como ajustes no vínculo do usuário com a conta e refatoração em algumas entidades.

--- a/CarteiraDigital.ProvedorAutenticacao/CarteiraDigital.ProvedorAutenticacao.csproj
+++ b/CarteiraDigital.ProvedorAutenticacao/CarteiraDigital.ProvedorAutenticacao.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CarteiraDigital.Models\CarteiraDigital.Models.csproj" />
+    <ProjectReference Include="..\CarteiraDigital.Servicos\CarteiraDigital.Servicos.csproj" />
   </ItemGroup>
 
 </Project>
