--- a/CarteiraDigital.ProvedorAutenticacao/appsettings.json
+++ b/CarteiraDigital.ProvedorAutenticacao/appsettings.json
@@ -8,5 +8,10 @@
   },
   "Keys": {
     "JwtBearer": "S_e_n_h_a=#MuITo%$@123486Forte//PARA*13k4sfj*11*geracao!494888!dotoken"
+  },
+  "Usuario": {
+    "IdadeMinima": {
+      "USA": 21
+    }
   }
 }
