--- a/CarteiraDigital.Api/appsettings.json
+++ b/CarteiraDigital.Api/appsettings.json
@@ -9,10 +9,8 @@
   "Keys": {
     "JwtBearer": "S_e_n_h_a=#MuITo%$@123486Forte//PARA*13k4sfj*11*geracao!494888!dotoken"
   },
-  "Usuario": {
-    "IdadeMinima": {
-      "USA": 21,
-      "BRA": 18
-    }
+  "Schemes": {
+    "Authentication": "JwtBearer",
+    "Challenge": "JwtBearer"
   }
 }
