Finalização do projeto (ajustes e conteinerização dos serviços).

--- a/CarteiraDigital.Api/appsettings.json
+++ b/CarteiraDigital.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CarteiraDigital": "Data Source=(LocalDb)\\MSSQLLocalDB;Database=CarteiraDigital;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CarteiraDigital": "Server=cd_sql,1433;Database=CarteiraDigital;User Id=SA;Password=2UiHL&!Y;MultipleActiveResultSets=true"
   },
   "Claims": {
     "Iss": "ApiCarteiraDigital",
