--- a/CarteiraDigital.ConsumidorOperacoes/appsettings.json
+++ b/CarteiraDigital.ConsumidorOperacoes/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "ConnectionStrings": {
+    "CarteiraDigital": "Server=cd_sql,1433;Database=CarteiraDigital;User Id=SA;Password=2UiHL&!Y;MultipleActiveResultSets=true"
+  },
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "cd_rabbit",
     "UserName": "admin",
     "Password": "WDb3#Je9h4q6l"
   }
