--- a/CarteiraDigital.ProdutorOperacoes/appsettings.json
+++ b/CarteiraDigital.ProdutorOperacoes/appsettings.json
@@ -1,6 +1,6 @@
 {
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "cd_rabbit",
     "UserName": "admin",
     "Password": "WDb3#Je9h4q6l"
   }
