--- a/CarteiraDigital.ProvedorAutenticacao/Properties/launchSettings.json
+++ b/CarteiraDigital.ProvedorAutenticacao/Properties/launchSettings.json
@@ -21,6 +21,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:6001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
