--- a/CarteiraDigital.Api/Properties/launchSettings.json
+++ b/CarteiraDigital.Api/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:60710",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:51052/",
+      "sslPort": 44322
     }
   },
   "profiles": {
