Definição das culturas suportadas e padrão.

--- a/CarteiraDigital.ProvedorAutenticacao/appsettings.json
+++ b/CarteiraDigital.ProvedorAutenticacao/appsettings.json
@@ -9,10 +9,15 @@
   "Keys": {
     "JwtBearer": "S_e_n_h_a=#MuITo%$@123486Forte//PARA*13k4sfj*11*geracao!494888!dotoken"
   },
+  "CulturasSuportadas": [
+    "pt-BR",
+    "en-US"
+  ],
+  "CulturaPadrao":  "pt-BR",
   "Usuario": {
     "IdadeMinima": {
-      "USA": 21,
-      "BRA": 18
+      "pt-BR": 18,
+      "en-US": 21
     }
   }
 }
