Culturas na API.

--- a/CarteiraDigital.Api/appsettings.json
+++ b/CarteiraDigital.Api/appsettings.json
@@ -12,5 +12,10 @@
   "Schemes": {
     "Authentication": "JwtBearer",
     "Challenge": "JwtBearer"
-  }
+  },
+  "CulturasSuportadas": [
+    "pt-BR",
+    "en-US"
+  ],
+  "CulturaPadrao": "pt-BR"
 }
